Fix facebook / twitter widget spacing in sidebar

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -148,6 +148,16 @@ input[type="submit"]
       margin-top: @line-height-sidebar-computed;
       margin-bottom: @line-height-sidebar-computed / 2;
    }
+
+   .fb-follow > span
+   {
+      vertical-align: top !important;
+   }
+
+   .fb-like
+   {
+      margin-top: 10px;
+   }
 }
 
 #mc-embedded-subscribe-form
